# mxfp6_sm120

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
benchmarks/: analyze.py  autotune.py  benchmark.py  compare_persistent_workspace.py  compare_small_batch.py  model_shapes.py  quantization.py  retune_runtime.py
benchmarks/results/: README.md  general_policy.json  native_w6a8_dispatch.json  persistent_workspace.json  runtime_autotune_v4.json  target_shapes.json
csrc/: mxfp6_gemm.cu  packing.cu  quantization.cu  torch_extension.cu
csrc/include/mxfp6_gemm/: kernel.hpp  kernel_large.hpp  kernel_normal.hpp  kernel_swap_m32.hpp  kernel_swapped.hpp  packing.hpp  quantization.hpp
patches/cutlass/: 0001-sm120-mxfp6-small-tile-runtime.patch  0002-sm120-mxfp6-profiler-search.patch  0003-sm120-streamk-persistent-workspace.patch  README.md
python/mxfp6/: CUTLASS_LICENSE.txt  __init__.py  _loader.py  autotune.py  humming_backend.py  metadata.json  ops.py
python/mxfp6/_vendor/: __init__.py
scripts/: apply_cutlass_patches.sh  build_profiler.sh  build_wheel.sh
tests/: stress_persistent_workspace.py  test_ops.py
