[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mxfp6-sm120"
version = "0.1.0"
description = "Native SM120 MXFP6 E3M2 block-scaled GEMM for PyTorch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["torch"]
license = {text = "BSD-3-Clause"}
authors = [{name = "MXFP6 SM120 contributors"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "Operating System :: POSIX :: Linux",
]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
mxfp6 = ["*.so", "*.txt", "metadata.json"]
