[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mxfp6-sm120"
version = "0.1.0"
description = "Native SM120 W6A8 GEMM with packed MXFP6 weights for PyTorch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["torch"]
license = "BSD-3-Clause"
authors = [{name = "MXFP6 SM120 contributors"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
humming = [
  "cuda-bindings",
  "filelock",
  "jinja2>=3.1",
  "numpy",
  "packaging",
  "pyelftools",
  "triton",
]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
exclude = ["mxfp6._vendor.__pycache__"]

[tool.setuptools.package-data]
mxfp6 = ["*.so", "*.txt", "metadata.json", "_vendor/**/*"]
